:sparkles: feat: implement fetching student
by id and error handling
